--- a/composer.json
+++ b/composer.json
@@ -26,7 +26,8 @@
     "require": {
         "php": ">=5.6",
         "zendframework/zend-mvc": "^3.0.4",
-        "zendframework/zend-mail": "^2.7.1"
+        "zendframework/zend-mail": "^2.7.1",
+        "zf-metal/log": "^0.0.1"
     },
     "autoload": {
         "psr-4": {
