--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
         "php": ">=5.6",
         "zendframework/zend-mvc": "^3.0.4",
         "zendframework/zend-mail": "^2.7.1",
-        "zf-metal/log": "^0.0.1"
+        "zf-metal/log": "^0.0.*"
     },
     "autoload": {
         "psr-4": {
