--- a/composer.json
+++ b/composer.json
@@ -2,8 +2,8 @@
     "name": "zf-metal/mail",
     "description": "Modulo de envío de emails para Zend Framework 3",
     "type": "library",
-    "license": "BSD-3-Clause",
-    "version": "0.0.2",
+    "license": "MIT",
+    "version": "1.0.0",
     "homepage": "https://github.com/cincarnato",
     "keywords": [
         "zf3"
@@ -25,9 +25,8 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.6",
-        "zendframework/zend-mvc": "^3.0.4",
-        "zendframework/zend-mail": "^2.7.1",
-        "zf-metal/log": "~0.0.2"
+        "zendframework/zend-mail": "^2.8",
+        "zf-metal/log": "^1.0.0"
     },
     "autoload": {
         "psr-4": {
